add pause and resume for http-service
